Query panel input overflow fix

--- a/src/app/panels/query/query.css
+++ b/src/app/panels/query/query.css
@@ -26,7 +26,7 @@
   opacity: 0;
 }
 .last-query {
-  padding-right: 45px !important;
+  padding-right: 70px !important;
 }
 .form-search:hover .remove-query {
   opacity: 1;
